add trade system for differents keys and trade params

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,3 +11,6 @@ commands:
   rewardjaspl:
     description: Diamond Sword Fire Aspect 1 or Sharpness 1 (randomly)
     usage: /rewardjaspl
+  tradekey:
+    description: TODO
+    usage: /tradekey
